cluster/config/wireguard-ui/wireguard-ui.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard-ui
  labels:
    app: wireguard
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-ui
  labels:
    app: wireguard
spec:
  type:
  ports:
    - port: 51821
      protocol: TCP
      name: http
  selector:
    app: wireguard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wireguard
  name: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      volumes:
        - name: wireguard
          persistentVolumeClaim:
            claimName: wireguard
      containers:
      - name: wireguard-ui
        image: weejewel/wg-easy
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
        volumeMounts:
          - mountPath: /etc/wireguard
            name: wireguard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard-ui
  labels:
    app: wireguard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wireguard.kube.home
    http:
      paths:
      - backend:
          service:
            name: wireguard-ui
            port:
              name: http
        path: /
        pathType: Prefix
